--- a/Final Portfolio/project.html
+++ b/Final Portfolio/project.html
@@ -48,7 +48,7 @@
   <footer id="footer">
     <div class="row">
       <div class="feature-box col-lg-6"><p>Juqy Chen Portfolio</p></div>
-      <div class="feature-box col-lg-6"><p>Contact Info: (phone number) (email)</p></div>
+      <div class="feature-box col-lg-6"><i class="fa-solid fa-phone-volume fa-1x"></i><p>Contact Info: (phone number) (email)</p></div>
     </div>
 
   </footer>
