--- a/Final Portfolio/resume.html
+++ b/Final Portfolio/resume.html
@@ -22,10 +22,18 @@
         </div>
       </header>
 
+
+
 <section id="content">
-  <section id="education">
+  <div class="pdf">  
+    <button class="btn btn-warning"><i class="fa-regular fa-file"></i><a href="ChenLab9-Resume.pdf"> PDF version</a></button>
+  </div>
+
+  <section id="education">  
     <div class="row">
-      <div class="feature-box col-lg-6">  <h1>Education</h1></div>
+      <div class="feature-box col-lg-6">
+        <i class="fa-solid fa-graduation-cap fa-3x"></i>
+        <h1>Education</h1></div>
       <div class="feature-box col-lg-6">
         <p class="school">University of California, San Diego<br>Bachelors Degree, Electrical Engineering</p>
       </div>
@@ -34,7 +42,7 @@
 
   <section id="skills">
     <div class="row">
-      <div class="feature-box col-lg-6"><h1 class="skills">Skills</h1></div>
+      <div class="feature-box col-lg-6"><i class="fa-solid fa-screwdriver-wrench fa-3x"></i><h1 class="skills">Skills</h1></div>
       <div class="feature-box col-lg-6">
         <ul>
           <li>Python, C, C++, HTML/JavaScript</li>
@@ -48,6 +56,7 @@
 
   <section id="experience">
       <div>
+        <i class="fa-solid fa-brain fa-3x"></i>
         <h1>Relevant Experience</h1>
         <h4>April 2024-June 2024</h4>
         <p class="position">Member, Team Binary Bandits</p>
@@ -99,7 +108,7 @@
 
   <section id="awards">
     <div class="row">
-      <div class="feature-box col-lg-6"><h1 class="awards">Awards</h1></div>
+      <div class="feature-box col-lg-6"><i class="fa-solid fa-trophy fa-3x"></i><h1 class="awards">Awards</h1></div>
       <div class="feature-box col-lg-6">
         <ul>
           <li>Provost Honors (Winter, Spring Quarter 2024)</li>
@@ -113,7 +122,7 @@
 <footer id="footer">
   <div class="row">
     <div class="col-lg-6"><p class="footer">Juqy Chen Portfolio</p></div>
-    <div class="col-lg-6"><p class="footer">Contact Info: (phone number) (email)</p></div>
+    <div class="col-lg-6"><i class="fa-solid fa-phone-volume fa-2x"></i><p class="footer">Contact Info: (phone number) (email)</p></div>
 </footer>
 
   </body>
