--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </main>
 <!--Resume-->
     <section id="resume">
-      <button class="game-style"><a href="http://127.0.0.1:5500/COGS3/Final%20Portfolio/resume.html">Resume</a>
+      <button class="game-style"><a href="resume.html">Resume</a>
       <span>Check my profile!</span>
       </button>
     </section>
