--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/209a22c7fe.js" crossorigin="anonymous"></script>
+
   </head>
 
 <!--Header--> 
@@ -26,7 +27,7 @@
 <!--Intro-->   
    <main role="main" class="inner cover">
       <h1 class="cover-heading">Hello, My name is Juqy Chen.</h1>
-            <h2 class="lead">An Electrical Engineering student with three years of robotic experience.<br>Enthusiatic to explore advanced PCB designs and embedded software development.<br>One of the biggest passions is arts and crafts! </h2>
+            <h2 class="lead">An Electrical Engineering student with <mark>3 years of robotic experience</mark><br>Enthusiatic to explore advanced<mark>PCB designs</mark> and <mark>embedded software development</mark>.<br>One of the biggest passions is arts and crafts! </h2>
           </main>
 <!--Resume-->
     <section id="resume">
